# web-server-benchmarks

./: .gitignore  1000-vus-actix-report.html  1000-vus-bun-report.html  1000-vus-dotnet-report.html  1000-vus-frog-report.html  1000-vus-gin-report.html  1000-vus-node-report.html  1000-vus-phoenix-report.html  README.md  k6_test.js
actix/: Cargo.toml  Dockerfile  README.md
actix/src/: auth.rs  handlers.rs  main.rs  middleware.rs  models.rs  repositories.rs  routes.rs
ash/: README.md  mix.exs
ash/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
ash/lib/: ash_web.ex
aspnetcore/: Dockerfile  Program.cs  local_ly_dotnet.csproj  local_ly_dotnet.http
aspnetcore/Controllers/: AuthController.cs  CategoryController.cs  ProductController.cs  UserController.cs
aspnetcore/Models/: Category.cs  LoginRequest.cs  LoginResponse.cs  Product.cs  User.cs
aspnetcore/Properties/: launchSettings.json
aspnetcore/Repositories/: AuthService.cs  CategoryRepository.cs  ProductRepository.cs  UserRepository.cs
bun/: Dockerfile  README.md  package.json
bun/src/: index.ts
dart_frog/: Dockerfile  README.md  pubspec.yaml
dart_frog/routes/: _middleware.dart
gin/: Dockerfile  README.md  go.mod  go.sum  main.go
gin/handlers/: auth_handler.go  category_handler.go  product_handler.go  user_handler.go
gin/middleware/: auth.go
gin/models/: product.go
gin/repositories/: auth_service.go  category_repository.go  product_repository.go  (+1 more)
nodejs/: Dockerfile  README.md  package.json  tsconfig.json
phoenix/: .gitignore  Dockerfile  README.md  mix.exs
(+68 files in other folders)
